<?xml version="1.0"?>
<package format="2">
  <name>blue_ping1d</name>
  <version>0.0.1</version>
  <description>ROS1 node for Blue Robotics ping1d</description>

  <maintainer email="pierre.narvor@ensta-bretagne.fr">Pierre Narvor</maintainer>

  <license>BSD3</license>


 <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
